public/css/app.css
@font-face{
    font-family: 'Material Icons';
    font-style: normal;
    font-weight: 400;
    src: local('Material Icons'), local('MaterialIcons-Regular'), url(../fonts/material-icons.woff2) format('woff2');
}

.material-icons{
    font-family: 'Material Icons';
    font-weight: normal;
    font-style: normal;
    line-height: 1;
    letter-spacing: normal;
    text-transform: none;
    display: inline-block;
    white-space: nowrap;
    word-wrap: normal;
    direction: ltr;
    -moz-font-feature-settings: 'liga';
    -moz-osx-font-smoothing: grayscale;
}

html {
	height: 100%;
}
  
body {
	min-height: 100%;
	/* background: linear-gradient(to right, rgba(187, 175, 221, 1), rgba(187, 175, 221, 0.8)); */
}

a {
    color: #00B7FF;
}

.main-theme{
	background: linear-gradient(to bottom, rgba(187, 175, 221, 1), rgba(187, 130, 221, 1));
}

/*tabs*/

.tabs .tab a.active {
    background-color: #8c0000 !important;
}

/*app panel*/

.app-panel{
    margin-top: 10px
}

.app-button{
    text-align: center;
    background-color: darkgray
}

.app-button.block{
    width: 100%;
    margin-bottom: 10px;
    height: 40px;
}

.app-button:hover{
    background-color: rgba(187, 175, 221)
}

/* tpv */
.total{
    border: solid #4CAF50;
}

.app-li{
    padding: 0 15px !important;
    color: #fff;
    display: inline-block;
    font-size: 2.0vh;
}

.products{
    height: 300px;
    overflow: hidden;
    margin-bottom: 10px;
}

.product{
    text-align: center;
    cursor: pointer;
    border-radius: 10px;
}

.product img{
    width: 100%;
    height: 100%;
}

.product:hover{
    background-color: rgba(187, 175, 221);
}

.product-controls{
    height: 300px;
}

.product-control{
    height: 50%;
}

@media only screen and (max-width: 992px) {
    .app-time-nav{
        display: none
    }    
}

/* modal */
.modal-footer .info{
    height: 36px;
    line-height: 36px;
    padding: 0 16px;
    text-transform: uppercase;
    vertical-align: middle;
    -webkit-tap-highlight-color: transparent;
    margin: 6px 0;
    float: left;
}

.dropdown-content.select-dropdown{
    max-height: 260px
}

